# Actorspp

./: .gitignore  CMakeLists.txt  README.org
include/: actors.hpp  components.hpp  events.hpp  main.hpp
include/py/: bindings.hpp  bindings_player.hpp  bindings_renderer.hpp  lib.py
include/renderer/: framebuffer.hpp  gl.hpp  mesh.hpp  renderer.hpp  resource_manager.hpp  shader.hpp  texture.hpp  window.hpp
resources/shaders/: basic100.frag  basic100.vert  framebuffer.frag  framebuffer.vert  framebuffer_add.frag  red.frag  sprite100.frag  sprite100.vert
scripts/: __init__.py  collision.py  inventory.py  sat_test.py  test.py
src/: main.cpp
src/actors/: player.hpp
src/tests/: stress_tests.hpp
